Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3268

lod_verify_striping(): bad userland LOV MAGIC: 0xd00bd10b

XMLWordPrintable

    • 3
    • 8103

      This occurred on a SPARC MDS when an x86 client tried to "lfs setstripe" a new directory:

      00000004:00000080:30.0:1367562225.034331:2800:27098:0:(lod_lov.c:850:lod_verify_striping()) bad userland LOV MAGIC: 0xd00bd10b

      The number is exactly LOV_USER_MAGIC_V1 swabbed. The client code always send the lov_mds_md_v1 structures in little-endian, and the MDS code do no swabbing for the structures. This is problematic for x86 clients talking with SPARC servers.

            jhammond John Hammond
            liwei Li Wei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: